# project-job-insights

./: README.md  pyproject.toml
src/insights/: industries.py  jobs.py  salaries.py
tests/brazilian/: test_brazilian_jobs.py
tests/counter/: test_counter.py
