[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-vv -s"
testpaths = ["tests",]
accept_xfail = true

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry]
name = "sd-040-project-job-insights"
version = "0.1.0"
description = ""
authors = ["b166erobot <bernard0freitas@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "8.0.4"
itsdangerous = "2.1.0"
jinja2 = "3.1.6"
markupsafe = "2.1.0"
werkzeug = "2.0.3"
python-dotenv = "0.19.2"
markdown = "3.3.6"


[tool.poetry.group.dev.dependencies]
wheel = "0.37.1"
black = "22.1.0"
flake8 = "4.0.1"
pytest = "7.0.1"
pytest-json = "0.4.0"
pytest-dependency = {git = "https://github.com/betrybe/pytest-dependency"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
